[package]
name = "project"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.0", features = ["full"] }
axum = { version = "0.8.1", features = ["macros"] }
specta = { git = "https://github.com/specta-rs/specta.git", branch = "main", default-features = false, features = ["derive", "serde", "export"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.140" }
